tests/machine/x/fs/if_then_else_nested.fs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T16:27:12Z
open System

let x: int = 8
let msg: obj = (if x > 10 then "big" else (if x > 5 then "medium" else "small"))
printfn "%A" msg
